--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6"
+    "babel-plugin-styled-components": "^1.10.6",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.11.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"
+    }
   }
 }
